k8s/deployment.yaml
# ==============================================================================
# תצורת פריסה (Deployment) - חזרה לגרסה היציבה
# ==============================================================================

apiVersion: apps/v1
kind: Deployment
metadata:
  name: status-page
spec:
  replicas: 1
  selector:
    matchLabels:
      app: statuspage
  template:
    metadata:
      labels:
        app: statuspage
    spec:
      containers:
      - name: statuspage-container
        image: 992382545251.dkr.ecr.us-east-1.amazonaws.com/yarin-noa-project:226d884220196e31a38edce8b0841330b383b083
        imagePullPolicy: Always
        workingDir: /app/statuspage
        ports:
          - containerPort: 8000
        command: ["/bin/sh", "-c"]
        args:
          - |
            python -m pip install --target . rq-scheduler whitenoise --no-cache-dir
            python manage.py collectstatic --noinput
            gunicorn --bind 0.0.0.0:8000 statuspage.wsgi:application
