k8s/external-dns.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: external-dns
  namespace: kube-system
spec:
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: external-dns
  template:
    metadata:
      labels:
        app: external-dns
    spec:
      serviceAccountName: external-dns
      containers:
        - name: external-dns
          image: registry.k8s.io/external-dns/external-dns:v0.13.4
          args:
            - --source=ingress        # הוא יסתכל על ה-Ingress שלך
            - --domain-filter=yarin-noa.site # הדומיין שלך
            - --provider=aws
            - --policy=sync           # מעדכן ומוחק רשומות אוטומטית
            - --aws-zone-type=public
            - --registry=txt
            - --txt-owner-id=yarin-noa-cluster
