k8s/worker-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: status-page-worker
  namespace: statuspage
spec:
  replicas: 1
  selector:
    matchLabels:
      app: statuspage-worker
  template:
    metadata:
      labels:
        app: statuspage-worker
    spec:
      containers:
        - name: worker
          image: 992382545251.dkr.ecr.us-east-1.amazonaws.com/yarin-noa-project:latest
          imagePullPolicy: Always
          workingDir: /app/statuspage
          # --- הפקודה שמפעילה את מנוע הבדיקות ---
          command: ["python", "manage.py", "rqworker", "high", "default", "low"]

          resources:
            requests:
              memory: "256Mi"
              cpu: "500m"
            limits:
              memory: "512Mi"
              cpu: "1000m"
